--- a/WordGenius/Styles/ButtonStyles.xaml
+++ b/WordGenius/Styles/ButtonStyles.xaml
@@ -12,7 +12,7 @@
                     <Border x:Name="B"
                         Background="#F2B22D"
                         CornerRadius="25" >
-                        <Path Fill="White" Data="{DynamicResource minus}"/>
+                        <Path Fill="White" Data="{DynamicResource minimize}"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -42,7 +42,7 @@
                     <Border x:Name="B"
                         Background="#2ABE3E"
                         CornerRadius="25" >
-                        <Path Fill="White" Data="{DynamicResource border}" />
+                        <Path Fill="#ffff" Data="{DynamicResource maximize}" Height="12" Width="12" Stretch="UniformToFill"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -72,7 +72,7 @@
                     <Border x:Name="B"
                         Background="#F05954"
                         CornerRadius="25" >
-                        <Path Fill="White" Data="{DynamicResource x}"/>
+                        <Path Fill="White" Data="{DynamicResource close}"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
