--- a/WordGenius/Assets/Icons/Icons.xaml
+++ b/WordGenius/Assets/Icons/Icons.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <PathGeometry x:Key="minimize" Figures="M19 13H5a1 1 0 0 1 0-2h14a1 1 0 0 1 0 2z"/>
-    <PathGeometry x:Key="maximize" Figures="M18 21H6a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3zM6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1z"/>
-    <PathGeometry x:Key="close" Figures="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"/>
+    <PathGeometry x:Key="minimize" Figures="M4 12a8 8 0 1 0 16 0a8 8 0 1 0 -16 0"/>
+    <PathGeometry x:Key="maximize" Figures="M4 12a8 8 0 1 0 16 0a8 8 0 1 0 -16 0"/>
+    <PathGeometry x:Key="close" Figures="M4 12a8 8 0 1 0 16 0a8 8 0 1 0 -16 0"/>
 
 </ResourceDictionary> 
