--- a/WordGenius/MainWindow.xaml
+++ b/WordGenius/MainWindow.xaml
@@ -16,43 +16,95 @@
         ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
+
         </Grid.RowDefinitions>
         <Border Grid.Row="0"
                 Background="{DynamicResource PrimaryBackground}"
-                CornerRadius=" 10 10 0 0"
-                BorderBrush="{DynamicResource PrimaryBorderColor}"
-                BorderThickness="0 0 0 1">
-            <Grid >
+                CornerRadius="10 10 0 0">
+            <Grid Margin="10 0 10 0">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="120"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <Button x:Name="MinimizedBtn" Click="MinimizedBtn_Click" Style="{DynamicResource MinimizedButton}"/>
-                    <Button x:Name="MaxsimizedBtn" Click="MaxsimizedBtn_Click" Style="{DynamicResource MaximazedButton}"/>
-                    <Button x:Name="CloseBtn" Click="CloseBtn_Click" Style="{DynamicResource CloseButton}"/>
+                <Border Grid.Row="0"
+                        Cursor="SizeAll"
+                        Background="{DynamicResource PrimaryBackground}"
+                        MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                        CornerRadius="30 0 0 0"
+                        >
+                    <Label Content="WordGenius"
+                           FontFamily="Jetbrain Mono"
+                           FontSize="16"
+                           FontWeight="Bold"
+                           Foreground="DarkSeaGreen"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="10 5 5 5">
+                    </Label>
+                </Border>
+                <TextBox Grid.Column="1" 
+                         Style="{DynamicResource TextBoxKey}"
+                         TextChanged="TextBox_TextChanged">
+                </TextBox>
 
+                <StackPanel Grid.Column="2"
+                            Orientation="Horizontal"
+                            Margin="0 0 10 0">
+                    <Button x:Name="BtnMinimize" Click="BtnMinimize_Click" Style="{DynamicResource MinimizedButton}"  Margin="5"
+                            BorderBrush="Black" BorderThickness="1">
+                        <Button.Effect>
+                            <DropShadowEffect></DropShadowEffect>
+                        </Button.Effect>
+                    </Button>
+                    <Button x:Name="BtnMaximize" Click="BtnMaximize_Click" Style="{DynamicResource MaximazedButton}"  Margin="5"
+                            BorderBrush="Black" BorderThickness="1">
+                        <Button.Effect>
+                            <DropShadowEffect></DropShadowEffect>
+                        </Button.Effect>
+                    </Button>
+                    <Button x:Name="BtnClose" Click="BtnClose_Click" Style="{DynamicResource CloseButton}"  Margin="5"
+                            BorderBrush="Black" BorderThickness="1">
+                        <Button.Effect>
+                            <DropShadowEffect></DropShadowEffect>
+                        </Button.Effect>
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
-        
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width ="250"/>
-                <ColumnDefinition Width = "*"/>
-            </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" 
-                    Background="{DynamicResource PrimaryBackground}"
-                    CornerRadius="0 0 0 10"> 
-                
-            </Border>
-            <Border Grid.Column="1"
-                    Background="{DynamicResource SecondaryBackground}"
-                    CornerRadius="0 0 10 0">
-                
-            </Border>
-        </Grid>
+        <Border Grid.Row="1"
+                Background="{DynamicResource PrimaryBackground}"
+                CornerRadius="0 0 10 10">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.Row="0"
+                    Background="{DynamicResource SecondaryBackground}"                                     
+                    CornerRadius="0 10 0 10">
+                    <StackPanel>
+                        <RadioButton x:Name="rb1" 
+                        Style="{DynamicResource MenuButton}"
+                        Content="Birinchisi">
+                        </RadioButton>
+                        <RadioButton x:Name="rb2" 
+                        Style="{DynamicResource MenuButton}"
+                        Content="Ikkinchi">
+                        </RadioButton>
+                        <RadioButton x:Name="rb3" 
+                        Style="{DynamicResource MenuButton}"
+                        Content="Uchinchi">
+                        </RadioButton>
+                        <RadioButton x:Name="rb4" 
+                        Style="{DynamicResource MenuButton}"
+                        Content="To'rtinchi">
+                        </RadioButton>
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
