--- a/WordGenius/Styles/ButtonStyles.xaml
+++ b/WordGenius/Styles/ButtonStyles.xaml
@@ -92,11 +92,11 @@
 
     <Style x:Key="MenuButton" TargetType="{x:Type RadioButton}">
         <Setter Property="Height" Value="40"/>
-        <Setter Property="Width" Value="200"/>
+        <Setter Property="Width" Value="230"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Margin" Value="0 5 0 5"/> 
+        <Setter Property="Margin" Value="0 3 0 3"/> 
         <Setter Property="Template"> 
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RadioButton}">
@@ -104,7 +104,7 @@
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="5"/>
-                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="60"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Border x:Name="Indicator" Grid.Column="0"
@@ -112,6 +112,12 @@
                                     Height="30"
                                     CornerRadius="5"
                                     Background="{DynamicResource SecondaryBackground}"/>
+                            <Path x:Name="icon"
+                                  Data="{Binding Tag,RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}" 
+                                  Stretch="UniformToFill"
+                                  Height="20" Width="20"
+                                  Fill="White"
+                                  Grid.Column="1"/>
                             <Label x:Name="MenuText" Grid.Column="2"
                                        FontSize="{TemplateBinding FontSize}"
                                        Foreground="White"
@@ -138,5 +144,21 @@
             </Setter.Value>
         </Setter>
         
-    </Style>     
+    </Style>
+
+    <Style x:Key="ReverseButton" TargetType="{x:Type Button}">
+        
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="B"
+                        Background="White"
+                        >
+                        <Path Fill="Black" Data="{DynamicResource reverse}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
