--- a/WordGenius/MainWindow.xaml
+++ b/WordGenius/MainWindow.xaml
@@ -37,9 +37,9 @@
                         >
                     <Label Content="WordGenius"
                            FontFamily="Jetbrain Mono"
-                           FontSize="16"
+                           FontSize="20"
                            FontWeight="Bold"
-                           Foreground="DarkSeaGreen"
+                           Foreground="DarkGreen"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Left"
                            Margin="10 5 5 5">
@@ -47,12 +47,7 @@
                 </Border>
                 <Border Grid.Column="1"
                         CornerRadius="5 5 5 5"
-                        Margin="5">
-                    <TextBox 
-                         Style="{DynamicResource TextBoxKey}"
-                         TextChanged="TextBox_TextChanged">
-                    </TextBox>
-                </Border>
+                        Margin="5"/>
 
 
                 <StackPanel Grid.Column="2"
